--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ nav a:active,.btn:active,button:active{transform:translateY(0)}
       <a href="practice_exam1.html">Practice Exam 1</a>
       <a href="practice_exam1-v2.html">Practice Exam 1 (v2)</a>
       <a href="practice_exam2.html">Practice Exam 2</a>
+      <!-- NEW: Exam 3 / radicals page -->
+      <a href="radicals_practice.html">Practice Exam 3</a>
       <a href="random_practice.html">Random Practice</a>
       <a href="random_practice_hard.html">Hard Random</a>
     </nav>
@@ -93,6 +95,11 @@ nav a:active,.btn:active,button:active{transform:translateY(0)}
       <a class="card" href="practice_exam2.html">
         <h3>Practice Exam 2</h3>
         <p>Original exam — MC + step‑by‑step grading</p>
+      </a>
+      <!-- NEW: Practice Exam 3 / radicals hub page -->
+      <a class="card" href="radicals_practice.html">
+        <h3>Practice Exam 3 — Radicals</h3>
+        <p>Radicals-focused exam + infinite generated drills</p>
       </a>
       <a class="card" href="random_practice_hard.html">
         <h3>Hard Random Practice</h3>
