--- a/index.html
+++ b/index.html
@@ -1,21 +1,3 @@
-This is the **final, polished `index.html`** dashboard.
-
-It is designed to be the "Home Base" for your repository. It automatically organizes every file you uploaded into a logical, easy-to-navigate interface that looks like a native app on phones (iOS/Android) and works perfectly on desktops (Mac/Windows/Linux).
-
-### **Changes:**
-
-1.  **Linked Everything:** Every file you shared (`ma025_practice_all.html`, `practice_exam1.html`, `unit5...`, etc.) is connected.
-2.  **Responsive Design:** Uses a modern "Card Grid" layout that stacks on phones and expands on computers.
-3.  **Correct File Names:** I used the filenames exactly as they appear in your repo (e.g., linking to `ma025_practice_all.html` for the Ultimate Suite).
-
-### **Instructions:**
-
-1.  Save this code as **`index.html`** in the main folder of your repository.
-2.  **Note:** I noticed one file was named `radicals_practice.html.html`. For this index to work perfectly, please rename that file to just **`radicals_practice.html`** (remove the second `.html`).
-
-<!-- end list -->
-
-```html
 <!doctype html>
 <html lang="en">
 <head>
@@ -177,7 +159,7 @@ It is designed to be the "Home Base" for your repository. It automatically organ
 
   <div>
     <div class="card-grid">
-      <a href="ma025_practice_all.html" class="card featured">
+      <a href="algebra_master.html" class="card featured">
         <h3>🏆 Algebra Master Suite</h3>
         <p>The complete all-in-one app. Contains Practice Exams 1, 2, 3, & 4 plus the Infinite Generator in a single interface.</p>
         <span class="tag" style="background:var(--accent); color:white; align-self:center; margin-top:1.5rem;">Start Here</span>
@@ -287,4 +269,3 @@ It is designed to be the "Home Base" for your repository. It automatically organ
 
 </body>
 </html>
-```
