--- a/index.html
+++ b/index.html
@@ -203,6 +203,12 @@
         <span class="tag green">New & Interactive</span>
       </a>
 
+      <a href="MA25B_PracticeExam4_Interactive.html" class="card">
+        <h3>Practice Exam 4 (Review Mode)</h3>
+        <p>Alternative interactive version. Features autosave and instant feedback logic.</p>
+        <span class="tag green">Interactive v2</span>
+      </a>
+
     </div>
   </div>
 
@@ -255,7 +261,7 @@
         <h3>🎧 Audio Lectures</h3>
         <p>Listen to class recordings (requires audio files in folder).</p>
       </a>
-       
+        
       <a href="references.html" class="card">
         <h3>🎥 Video References</h3>
         <p>Curated list of YouTube search links for every math topic.</p>
